--- a/blog/wp-content/themes/twentyseventeen/assets/css/editor-style.css
+++ b/blog/wp-content/themes/twentyseventeen/assets/css/editor-style.css
@@ -298,14 +298,8 @@ td:last-child {
 }
 
 a {
-	-webkit-box-shadow: inset 0 -1px 0 rgba(15, 15, 15, 1);
-	box-shadow: inset 0 -1px 0 rgba(15, 15, 15, 1);
-	color: #222;
-	text-decoration: none;
-	-webkit-transition: color 80ms ease-in, -webkit-box-shadow 130ms ease-in-out;
-	transition: color 80ms ease-in, -webkit-box-shadow 130ms ease-in-out;
-	transition: color 80ms ease-in, box-shadow 130ms ease-in-out;
-	transition: color 80ms ease-in, box-shadow 130ms ease-in-out, -webkit-box-shadow 130ms ease-in-out;
+	cursor: pointer;
+	color: blueviolet;
 }
 
 a:focus {
@@ -314,9 +308,7 @@ a:focus {
 
 a:hover,
 a:focus {
-	color: #000;
-	-webkit-box-shadow: inset 0 0 0 rgba(0, 0, 0, 0), 0 3px 0 rgba(0, 0, 0, 1);
-	box-shadow: inset 0 0 0 rgba(0, 0, 0, 0), 0 3px 0 rgba(0, 0, 0, 1);
+
 }
 
 /* Fixes linked images */
@@ -597,4 +589,19 @@ object {
 
 .rtl .mejs-offscreen {
 	right: -10000px;
+}
+
+.twitter-quote .quotes,
+.twitter-quote .tweety {
+	display: inline-block;
+	height: 30px;
+	width: 30px;
+}
+.twitter-quote {
+	color: #f77287;
+	font-size: 20px;
+	text-align: center
+}
+.twitter-quote {
+    display: block;
 }
